# picoforge

./: .gitignore  CREDITS.md  Cargo.toml  Info.plist  Packager.toml  README.md  build.rs  deno.json  devenv.nix  flake.nix  package.json  package.nix  picoforge.spec  rustfmt.toml  sdkconfig.old  shell.nix  svelte.config.js  update_formula.sh  vite.config.js
.cargo/: audit.toml  config.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/manifests/: in.suyogtandel.picoforge.json
.github/scripts/: build_appimage.sh  build_flatpak.sh  sync_spec_version.sh
.github/workflows/: ci.yml  docs.yml  nightly-release.yml  nix-binary-cache.yml  nix-check-package.yml  nix-update-package.yml  release-nightly.yml  release.yml  wiki-sync.yml
Formula/: picoforge.rb
data/: in.suyogtandel.picoforge.desktop  in.suyogtandel.picoforge.metainfo.xml
docs/: Building.md  Home.md  Installation.md  Troubleshooting.md
src/: .gitignore  app.css  app.html  error.rs  logging.rs  main.rs  tauri.conf.json  tray.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: fido.rs  io.rs  lib.rs  main.rs  types.rs
src-tauri/src/fido/: constants.rs  hid.rs  mod.rs
src-tauri/src/rescue/: mod.rs
src/device/: io.rs  logging.rs  main.rs  mod.rs  types.rs
src/hal/: io.rs  mod.rs  types.rs
src/routes/: +page.svelte
src/ui/: app.rs  assets.rs  color.rs  colors.rs  mod.rs  rootview.rs  types.rs  ui_types.rs
static/appIcons/: icon.icns
themes/: picoforge-zinc.json
(+72 files in other folders)
